--- a/project/home.html
+++ b/project/home.html
@@ -1,183 +1,48 @@
+
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Chat UI Mockup</title>
-  <style>
-    :root{
-      --bg:#070707;
-      --card:#0f0f10;
-      --muted:#9aa0a6;
-      --accent:#6b5cff;
-      --pill:#2b2b2f;
-      --glass: rgba(255,255,255,0.04);
-      --shadow: 0 6px 20px rgba(0,0,0,0.6);
-      --radius:18px;
-      font-family: Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
-    }
-    html,body{height:100%;}
-    body{
-      margin:0;
-      background:linear-gradient(180deg,var(--bg),#000);
-      color:#fff;
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding:22px 10px;
-    }
-    .frame{
-      width:360px; /* mobile width */
-      height:780px;
-      background:transparent;
-      display:flex;
-      flex-direction:column;
-      justify-content:space-between;
-    }
+	<head>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Upload PDF & Generate</title>
+		<link rel="stylesheet" href="home.css" />
+	</head>
+	<body>
+		<main class="container">
+			<header class="hero">
+				<h1 class="title">PDF Uploader & Prompt</h1>
+				<p class="subtitle">Upload a PDF, type a prompt, and click Generate.</p>
+			</header>
 
-    /* top bar */
-    .topbar{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      padding:12px 10px;
-    }
-    .left-icons{display:flex;gap:8px;align-items:center}
-    .icon-btn{width:36px;height:36px;border-radius:10px;background:var(--glass);display:flex;align-items:center;justify-content:center}
-    .pill{background:linear-gradient(90deg,#5f56ff,#7c66ff);padding:8px 16px;border-radius:20px;font-weight:600;color:#fff;box-shadow:var(--shadow)}
+			<form id="uploaderForm" class="card" enctype="multipart/form-data" novalidate>
+				<div class="field">
+					<label for="pdfFile">Select PDF</label>
+					<div class="file-input">
+						<input id="pdfFile" name="pdf" type="file" accept="application/pdf" />
+						<span id="fileName" class="file-name">No file chosen</span>
+					</div>
+					<small class="hint">Max size: 10MB. Only PDF files are accepted.</small>
+				</div>
 
-    /* center area */
-    .center{
-      display:flex;
-      flex-direction:column;
-      align-items:center;
-      gap:22px;
-      margin-top:40px;
-    }
-    h1{font-size:20px;margin:0;font-weight:700}
+				<div class="field">
+					<label for="prompt">Prompt</label>
+					<textarea id="prompt" name="prompt" rows="4" placeholder="Ask a question about the uploaded PDF (e.g. 'Summarize chapter 2')."></textarea>
+				</div>
 
-    .actions{
-      width:100%;
-      display:grid;
-      grid-template-columns:repeat(2,1fr);
-      gap:12px;
-      padding:0 8px;
-    }
-    .action{
-      display:flex;
-      gap:12px;
-      align-items:center;
-      padding:14px;
-      border-radius:14px;
-      background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));
-      border:1px solid rgba(255,255,255,0.03);
-      cursor:pointer;
-      transition:transform .12s ease, box-shadow .12s ease;
-      box-shadow: 0 4px 18px rgba(0,0,0,0.6);
-    }
-    .action:active{transform:translateY(1px)}
-    .action .label{display:flex;flex-direction:column}
-    .action .title{font-weight:600}
-    .action .sub{font-size:12px;color:var(--muted)}
+				<div class="actions">
+					<button id="generateBtn" class="btn primary" type="button">Generate</button>
+					<button id="clearBtn" class="btn" type="button">Clear</button>
+				</div>
 
-    .row-actions{display:flex;gap:12px;padding:0 8px}
-    .big-btn{
-      flex:1;
-      padding:14px;border-radius:14px;background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border:1px solid rgba(255,255,255,0.03);display:flex;gap:12px;align-items:center;cursor:pointer
-    }
+				<div id="status" class="status" aria-live="polite"></div>
+			</form>
 
-    /* bottom input */
-    .bottom{
-      padding:14px 12px 22px;
-    }
-    .input-row{
-      height:52px;background:var(--pill);border-radius:28px;display:flex;align-items:center;gap:10px;padding:0 12px;box-shadow:var(--shadow)
-    }
-    .plus{width:40px;height:40px;border-radius:10px;background:transparent;border:1px solid rgba(255,255,255,0.03);display:flex;align-items:center;justify-content:center}
-    .input{flex:1;background:transparent;border:0;color:#fff;outline:none;font-size:15px}
-    .mic{width:42px;height:42px;border-radius:999px;background:linear-gradient(180deg,#fff 0%, #cfd2ff 100%);display:flex;align-items:center;justify-content:center;color:#000}
+			<section id="result" class="result hidden">
+				<h2>Result</h2>
+				<pre id="resultText" class="result-text"></pre>
+			</section>
+		</main>
 
-    /* small helper styles */
-    .muted{color:var(--muted);font-size:13px}
-    .small{font-size:12px;color:var(--muted)}
-
-    /* responsive tweak */
-    @media (max-width:400px){
-      .frame{width:94vw}
-    }
-  </style>
-</head>
-<body>
-  <div class="frame" role="application" aria-label="Chat UI mockup">
-    <div>
-      <div class="topbar">
-        <div class="left-icons">
-          <div class="icon-btn" title="menu">
-            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M4 6H20M4 12H20M4 18H11" stroke="white" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
-          </div>
-        </div>
-        <div class="pill">Upgrade</div>
-        <div class="icon-btn" title="profile">
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><circle cx="12" cy="8" r="3" stroke="white" stroke-width="1.6"/><path d="M4 20c1.5-4 6-6 8-6s6.5 2 8 6" stroke="white" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
-        </div>
-      </div>
-
-      <div class="center">
-        <h1>What can I help with?</h1>
-
-        <div class="actions" aria-hidden="false">
-          <div class="action" onclick="alert('Create image')">
-            <svg width="28" height="28" viewBox="0 0 24 24" fill="none"><path d="M3 7a2 2 0 012-2h14a2 2 0 012 2v10a2 2 0 01-2 2H5a2 2 0 01-2-2V7z" stroke="#9bd0ff" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/><path d="M8 13l2.5-3 3 4 2.5-3" stroke="#9bd0ff" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"/></svg>
-            <div class="label"><div class="title">Create image</div><div class="sub">Generate pictures</div></div>
-          </div>
-
-          <div class="action" onclick="alert('Summarize text')">
-            <svg width="28" height="28" viewBox="0 0 24 24" fill="none"><path d="M7 7h10M7 12h8M7 17h6" stroke="#ffd48a" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
-            <div class="label"><div class="title">Summarize text</div><div class="sub">Shorten long text</div></div>
-          </div>
-
-          <div class="action" onclick="alert('Brainstorm')">
-            <svg width="28" height="28" viewBox="0 0 24 24" fill="none"><path d="M9 18l6-6" stroke="#a2ffb1" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><circle cx="12" cy="8" r="5" stroke="#a2ffb1" stroke-width="1.6"/></svg>
-            <div class="label"><div class="title">Brainstorm</div><div class="sub">Get idea starters</div></div>
-          </div>
-
-          <div class="action" onclick="alert('Help me write')">
-            <svg width="28" height="28" viewBox="0 0 24 24" fill="none"><path d="M3 21l3-1 1-3 10-10a2.5 2.5 0 113.5 3.5L11.5 20l-3 1-1 3-4 1z" stroke="#d7b0ff" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-            <div class="label"><div class="title">Help me write</div><div class="sub">Draft emails, posts</div></div>
-          </div>
-        </div>
-
-        <div class="row-actions">
-          <div class="big-btn" onclick="alert('More')">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none"><path d="M12 6v.01M12 12v.01M12 18v.01" stroke="#9aa0a6" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
-            <div style="flex:1;text-align:left"><div class="title">More</div><div class="small">Explore other tools</div></div>
-          </div>
-        </div>
-
-      </div>
-    </div>
-
-    <div class="bottom">
-      <div class="input-row">
-        <div class="plus">+
-        </div>
-        <input class="input" placeholder="Ask ChatGPT" aria-label="Ask ChatGPT" />
-        <div title="voice" class="mic">
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M12 1v11" stroke="#000" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/><path d="M8 11a4 4 0 008 0" stroke="#000" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"/></svg>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <script>
-    // small demo: keep keyboard focused on input when tapped frame
-    document.querySelector('.frame').addEventListener('click', (e)=>{
-      const input = document.querySelector('.input');
-      if(e.target === input) return;
-      input.focus();
-    });
-  </script>
-</body>
+		<script src="home.js"></script>
+	</body>
 </html>
