--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <div id="status" class="hint"></div>
   </div>
 
+  <!-- Create a local config.js (see config.example.js) which sets window.GOOGLE_API_KEY and optional window.MODEL -->
+  <script src="config.js"></script>
   <script type="module" src="client.js"></script>
 </body>
 </html>
